# accessibility-audit-tool

./: .env.example  .gitignore  CONTRIBUTING.md  Makefile  README.md  docker-compose.yml
backend/: Cargo.toml  Dockerfile  axe-core.min.js
backend/src/: main.rs
backend/src/api/: audit.rs  mod.rs  projects.rs  reports.rs
backend/src/core/: errors.rs  models.rs
backend/src/services/: audit_service.rs  mod.rs  storage.rs
backend/src/utils/: validators.rs
backend/tests/: integration_test.rs
docs/: API.md
frontend/: Dockerfile  nginx.conf  package.json
frontend/public/: index.html
frontend/src/: App.test.tsx  App.tsx
frontend/src/components/: Navbar.tsx
frontend/src/pages/: AuditPage.tsx  Dashboard.tsx  ProjectDetail.tsx  Projects.tsx
frontend/src/styles/: index.css
frontend/src/utils/: api.ts
