[package]
name = "accessibility-audit-backend"
version = "0.1.0"
edition = "2021"
description = "Backend service for WCAG accessibility audit tool"
authors = ["EonHermes"]

[dependencies]
# Web framework
axum = { version = "0.7", features = ["json"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tokio = { version = "1", features = ["full"] }

# Browser automation
headless_chrome = "1.0"
webdriver-client = "0.5"

# Axe-core integration
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.19"

# Validation
validator = { version = "0.18", features = ["derive"] }

# Regex for HTML parsing
regex = "1.10"

[dev-dependencies]
assert-json-diff = "2.0"
mockito = "1.4"
tokio-test = "0.4"
